<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.bjfu</groupId>
  <artifactId>Online_SMsystem4SP</artifactId>
  <version>1.0.0</version>
  <packaging>war</packaging>

  <name>Online_SMsystem4SP</name>
  <description>科研论文在线投稿及管理系统 - JavaWeb 课程设计基本框架（Servlet + JSP）</description>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- 统一管理版本 -->
    <servlet.api.version>4.0.1</servlet.api.version>
    <jsp.api.version>2.3.3</jsp.api.version>
    <jstl.version>1.2</jstl.version>
    <mssql.jdbc.version>9.4.0.jre8</mssql.jdbc.version>

    <!-- 邮件依赖：JDK 9+ 运行时通常需要显式引入（如果你的 MailNotifications 用到 javax.mail） -->
    <javax.mail.version>1.6.2</javax.mail.version>
    <javax.activation.version>1.2.0</javax.activation.version>
    <!-- JSON处理依赖版本 -->
    <json.version>20230227</json.version>
    <!-- HTML转PDF依赖版本 -->
    <flying.saucer.version>9.1.22</flying.saucer.version>
    <itext.version>2.1.7</itext.version>
    <!-- 新增：Bouncycastle版本（1.70修复了循环继承bug） -->
    <bouncycastle.version>1.70</bouncycastle.version>
  </properties>

  <dependencies>
    <!-- Servlet API，由容器提供 -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>${servlet.api.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- JSP API，由容器提供 -->
    <dependency>
      <groupId>javax.servlet.jsp</groupId>
      <artifactId>javax.servlet.jsp-api</artifactId>
      <version>${jsp.api.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- JSTL 标签库 -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jstl</artifactId>
      <version>${jstl.version}</version>
    </dependency>

    <!-- SQL Server JDBC 驱动 -->
    <dependency>
      <groupId>com.microsoft.sqlserver</groupId>
      <artifactId>mssql-jdbc</artifactId>
      <version>${mssql.jdbc.version}</version>
    </dependency>

    <!-- 邮件发送依赖 -->
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>javax.mail</artifactId>
      <version>${javax.mail.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sun.activation</groupId>
      <artifactId>javax.activation</artifactId>
      <version>${javax.activation.version}</version>
    </dependency>

    <!-- 新增：JSON处理依赖（解决org.json.JSONObject找不到的报错） -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>${json.version}</version>
    </dependency>

    <!-- 新增：HTML转PDF工具（Flying Saucer）- 解决ITextRenderer类找不到的报错 -->
    <dependency>
      <groupId>org.xhtmlrenderer</groupId>
      <artifactId>flying-saucer-pdf</artifactId>
      <version>${flying.saucer.version}</version>
      <!-- 排除旧版本的Bouncycastle依赖，避免冲突 -->
      <exclusions>
        <exclusion>
          <groupId>org.bouncycastle</groupId>
          <artifactId>bcprov-jdk15on</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <!-- 新增：Flying Saucer依赖的PDF生成库（iText 2.x为开源兼容版） -->
    <dependency>
      <groupId>com.lowagie</groupId>
      <artifactId>itext</artifactId>
      <version>${itext.version}</version>
    </dependency>

    <!-- 新增：修复循环继承bug的Bouncycastle核心依赖 -->
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <version>${bouncycastle.version}</version>
    </dependency>
  </dependencies>

  <build>
    <finalName>Online_SMsystem4SP</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.2</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
          <warSourceDirectory>src/main/webapp</warSourceDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>